# laba2

./: CMakeLists.txt
.github/workflows/: release.yml
src/: CMakeLists.txt  IPParser.hpp  IPStruct.cpp  IPStruct.hpp  main.cpp
unittests/: CMakeLists.txt  IPParserTests.cpp
unittests/IP/: test1.txt
